# ChangeLog for media-sound/jack-audio-connection-kit
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Nov 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  jack-audio-connection-kit-0.121.3-r2.ebuild,
  -jack-audio-connection-kit-1.9.9.5.ebuild,
  jack-audio-connection-kit-1.9.9.5-r2.ebuild,
  jack-audio-connection-kit-1.9999-r1.ebuild,
  jack-audio-connection-kit-2.9999-r1.ebuild:
  Make sure all ebuilds have the celt USE flag and that the opus flag is 
  available when possible. Thanks to Zlobin Nikita for reporting the 
  issue.
  Updated celt dependency in 1.9.9.5-r1.
  Correct dbus-python dependency.
  Remove old python eclass ebuild.

*jack-audio-connection-kit-2.9999-r1 (31 Jul 2013)
*jack-audio-connection-kit-1.9999-r1 (31 Jul 2013)
*jack-audio-connection-kit-1.9.9.5-r2 (31 Jul 2013)
*jack-audio-connection-kit-0.121.3-r2 (31 Jul 2013)

  31 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +jack-audio-connection-kit-0.121.3-r2.ebuild,
  +jack-audio-connection-kit-1.9.9.5-r2.ebuild,
  +jack-audio-connection-kit-1.9999-r1.ebuild,
  +jack-audio-connection-kit-2.9999-r1.ebuild:
  Initial experimental multilib compatible ebuilds.
    Freebob dropped.
    Firewire support not done yet (multilib ffado is missing).
    Python fixes (PYTHON_REQUIRED_USE, PYTHON_DEPS).

*jack-audio-connection-kit-0.121.3-r1 (31 Jul 2013)

  31 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +jack-audio-connection-kit-0.121.3-r1.ebuild:
  Use python-single-r1 eclass to make sure jack_control has correct shebang.

  31 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  jack-audio-connection-kit-0.121.3.ebuild:
  Minor cleanup.
  AUTOTOOLS_AUTORECONF before inherit.
  Don't declare DOCS; they are already default.
  EAPI>4 passes --disable-dependency-tracking to econf by default.

*jack-audio-connection-kit-1.9.9.5-r1 (10 May 2013)

  10 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>