@@ -12,9 +12,9 @@ EBUILD jack-audio-connection-kit-0.121.3-r2.ebuild 3261 SHA256 352c9037c7092a0f7
 EBUILD jack-audio-connection-kit-0.121.3.ebuild 2096 SHA256 3a7e32a387fb164f98a4560dec91c2146d84293832631ab51eb193d764f7ad70 SHA512 54d6fbd1ea9a4747fdd58bf90aecb87c80a812ff95992e0bd8ae42d0fc929d202248cd8e554f0e2d94150077e1160daf8321f733989ed687f062db40896a23a6 WHIRLPOOL 288352e28631240e9053c230e54fa572e66bc05f527dd3ffcd2ab7afb0980f296f0502999e8d8f36b38f9175520837a168d12608cff04d990615f38aa1681ea5
 EBUILD jack-audio-connection-kit-1.9.9.5-r1.ebuild 1711 SHA256 189a4439f9a9a4cd768c8c161bae7fcde64c4ef800bd6a242f19f13f752eaba0 SHA512 74dd56b3c22330c6a7ae08ae3a05df64b6ae2d093cdacfb303769736853338e6f5401ac2ebe4b925e02fb6c4164c4f6ed0daf6a5732588be7e728636fab937de WHIRLPOOL 5f6c758dfff15cebf708b471d4cf59637e7bb50209c296b0f8b46200baefe29fbb2591244254b8d141d7a376fcdad62d3e15c2c8f9d7adf76a89eb38b0e96087
 EBUILD jack-audio-connection-kit-1.9.9.5-r2.ebuild 2642 SHA256 171f4ae9220499242701bafc3a4ce16f809e4929a8ed49e1637351c8a8e343ac SHA512 51de6e18269a76eb1324425ec075bf9bff820415e2aaf918329a0ef47f4820f8faad3a06b8ccfcb1ba0ef317da062f8263c44d35bcac7bbf3121db4f29a0cb4d WHIRLPOOL 0c05592828f3419d858b9f82464f93b0737fbf163e1c6d4dcaa49280489aacd0ba3109e56795e40bf6e804b806263208a76d202c9d788b9b8530e0f7cc905aa3
-EBUILD jack-audio-connection-kit-1.9999-r1.ebuild 3094 SHA256 add5d8ebe58569fd0f5b660b1aee28ede92882f58b75d755e09725fbf6b83e38 SHA512 6bdd6a2a7f76928f3d5ce1fc3c67a3b8f0597867e94d6f1f81f3594175058846956bd47fcc42ad9bcafe98d7962732bc4cad88f62196d88e26bdcd4bc92473b1 WHIRLPOOL ab180cc937d9cc61933d9be10b4baa6b94897442c98741dbf1dfc89e16b876acafadf05b20a1e0d1be10e9c5a6aae531a8f4070e5a50dec2d73e60be95467467
-EBUILD jack-audio-connection-kit-1.9999.ebuild 1919 SHA256 84c209409988902c7d405d0554dfe4d5392661085db34fc56f4c6a640a237be8 SHA512 32e5a8f7fbfa57bd7637d0643d32792a0dbe5a3debd61d746cf29649c5b1348c9ccbe5864dff59183ea1fdb8bae185a201c593834776c731c26a68ab31942d95 WHIRLPOOL 0e97cc31f9d0c33014c4f0b2dab9a32777b2adb24aa50e76630b09d82083e8960241ca061b973e171b86177165f460d15cedbe17095d372062c38e4e05d809c1
+EBUILD jack-audio-connection-kit-1.9999-r1.ebuild 3192 SHA256 55f04dddb4ee4f352e22156c8fd161bac21ab44437a8e938ba70d9426d3c9629 SHA512 98aed5fee9f08daefe7e305acce40ed9c7ad1c7212677ad89a78866cc4bdc5791d0e63600b65744808a4fdfdb2c3bf5af13db67360ffb6e1574fe93711d2b2aa WHIRLPOOL 6f0e9c61f6d1eef69993517b3188a1f92bc07d6c48a146beaf941f942a9c5a9bfec7ac7e6ea06899ff2077fafa025c2bd5b6385e3fd033b8c9236dbdfd03790f
+EBUILD jack-audio-connection-kit-1.9999.ebuild 2020 SHA256 dd228e41ec0cce3d3ad2d40c74d511d83afc30943230336252994624e371ebb1 SHA512 82fcf173d58794c30981ea08b5dfd69ba4f716b73cf758c8c95b041d37f8ff7305a95d1855a44a4be4676640df64538dc4ca03bf847993be6b9cb87837637ca3 WHIRLPOOL e8e9fc2c844f253128562738aaea8c9ab771d62e41dce7e635686239a8d7afa447eead96742091256f018c52c97af7329b92935d1b35ef4b5cd236ceb5d6eb52
 EBUILD jack-audio-connection-kit-2.9999-r1.ebuild 2553 SHA256 6015fb05705b12d82742aa1ad70d0f14c56c3d29c75e28fe9d1927e26a4be8b1 SHA512 1327f79d13850483a360005d69a40826241560f96f70b915da7ca9762296399a022e96dd3c966616e503654d12ec2c48796d25c4bc30cd41d3f3b21d204c24e9 WHIRLPOOL 66c57a389b66855b2c82ff3b9819eef7510c9aee466171cf9aa82b26f0308c57fa3a73a7671b6f71de02bb5ed056a90b745e4a9fa53c99dacced709047f84dba
 EBUILD jack-audio-connection-kit-2.9999.ebuild 1654 SHA256 038607120050fdab02458accc0ea407a0aeaafcc50de679e0467feb711fbb822 SHA512 e09a376b912748231c8dd5e88d20ea81aa7af4fdd6f1ec86529c0a44e1ee21b3e804ab51bfaaa2326fb4a2d14a10252af940374ef603a78c10b1f709adfce564 WHIRLPOOL 0f3abf3e8015707e417e93bcbe6adecd04fafef3bf0e471fd4f83403ec379b9e35f7c1bac059c2c60f979a9825e44a69114d50b175c874a391746e3d1331146f
-MISC ChangeLog 15042 SHA256 7dc3d3baf49f3336481dcaf466411f66cbae7a61670f096b92c26e41e4fcb890 SHA512 b207cbe41556cd13aaa2773770f42b73e6d53463634369ea6596ae4c7058d654173ff1ce92f2a983f8222c4f9c217d47b2b2cc8d2801384ceba43c8be34bb4d1 WHIRLPOOL 56974027e223e9dc33ed9de7d62aadbb7284f4ff0faefb4fc4a65ea511ad9f139f06d3e9c830eb102af7cce46e5c72ece00bb21f654d1b0a5d0a7af9d45e1f97
-MISC metadata.xml 936 SHA256 4451b4a0ee0e6b04e3da3a568eae48f4b3f2fe2abd8b7d423e7cdd5ace9a2006 SHA512 f3054f9e563f3234088d4302bca0d525e67c28d0cf0597fb13529c497ffa5e66abfb4c2f09f1157f8289d2695df6fd39cff4e5501af5a6c52d99ace3cde1ffc7 WHIRLPOOL 53a36456744f0f7a90831ac1c6d7309e00d14de491bc48f3530bf5ce04ceb89c9e71f1f14103e9bfb6abed0b0cc381ed6d60d93a012efa5a3dce97a6f7f3f28d
+MISC ChangeLog 15294 SHA256 72569f34fe2385d778ce5c5b6a7060ddbb862422a08c54c98b9b61924e625d35 SHA512 206e555037dc3f8ec8545195b4fc1500b6a51760ed6b82f76373034257619014ee5efa3b69cea5c2289f6e695cdeabcf16056ed837f674050aa215f90e7172b5 WHIRLPOOL 45644f31405a419f67129bfae75b58a12571aba75578ec05712ebb7f40fdb11b3cf2b73458e45934d29db101856513fa34a868c8c27512426195c1eed2efb2cf
+MISC metadata.xml 1071 SHA256 cd2698ec957e25e00f38839ddaf103121713909a75e2cd040a449425b274cc07 SHA512 6dd7d6434056170864ef6d17ed738b34156830f892c31438ae4865fb10fb693c114e7e7fc21ca965eac69a7aed3c43d26f073a21063945605803da41ec71d95b WHIRLPOOL 088752ddcf3b51d546b00f8ca5c874b202ac95869480ae681331f764bd4ae0915481d9afd8625feab5667523e2df6b33d59c16cc168fbfa1ff798aee50bddca7
