@@ -16,5 +16,6 @@
 		<flag name="netjack">Build netjack</flag>
 		<flag name="opus">build with compression support using media-libs/opus in netjack</flag>
 		<flag name="pam">Add basic realime configuration via <pkg>sys-auth/realtime-base</pkg></flag>
+		<flag name="zalsa">Add multi device support via <pkg>media-libs/ziza-alsa-pcmi</pkg> and <pkg>media-libs/zita-resampler</pkg></flag>
 	</use>
 </pkgmetadata>
